[tool.poetry]
name = "netcdfella"
description = "Netcdfella is providing multiple ways to convert netcdf filed into other data types such as ASCII, PNG and JPG, and even create graphs."
authors = [
    "Nikos Fotiou <nik_fot@hotmail.gr>" 
]
version ="0.3.30"
homepage = "https://nikfot.github.io/netcdfella/"
repository = "https://github.com/nikfot/netcdfella"
readme = "README.md"
keywords = ["netcdf", "ascii","conversion","png"]
license = "GPL-3.0-or-later"
classifiers = [
    "Topic :: Scientific/Engineering :: Image Processing",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Matplotlib",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.12"

[tool.setuptools_scm]
write_to = "netcdfella/cli/__version__.py"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools>=59.6.0","setuptools-scm>=7.0.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netcdfella = "netcdfella.cli.__main__:main"

#sudo apt -y install libgeos-dev